cabal-version: 2.2

name:           bounded-queue
version:        1.0.0
category:       Data
homepage:       https://gitlab.com/fosskers/bounded-queue
author:         Colin Woodbury
maintainer:     colin@kadena.io
copyright:      2019 Kadena LLC
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README.md

common commons
    default-language: Haskell2010
    build-depends: base >= 4.7 && < 5
    ghc-options: -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

library
  import: commons
  hs-source-dirs: lib

  exposed-modules: Data.Queue.Bounded

  build-depends: containers
               , deepseq
               , strict-list >= 0.1
               , vector >= 0.12


benchmark bounded-queue-bench
  import: commons
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs: bench
  ghc-options: -threaded -O2 -with-rtsopts=-N

  build-depends: bounded-queue
               , criterion >= 1.5
